--- a/Day4New/Day4New.csproj
+++ b/Day4New/Day4New.csproj
@@ -1,3 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -5,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="Program.cs" />
+    <Content Include="Classes\CompositeClassShelf.cs" />
+    <Content Include="Interfaces\ILibraryItem.cs" />
+    <Content Include="Classes\ClassBook.cs" />
+  </ItemGroup>
 </Project>
