--- a/Week2/Day10/Enumerator and Operator Overloading/Enumerator and Operator Overloading.csproj
+++ b/Week2/Day10/Enumerator and Operator Overloading/Enumerator and Operator Overloading.csproj
@@ -3,13 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>Delegate_Events_Practice</RootNamespace>
+    <RootNamespace>Enumerator_and_Operator_Overloading</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Program.cs" />
-    <Content Include="work.cs" />
-    <Content Include="EventArgs.cs" />
+    <Content Include="Complex.cs" />
   </ItemGroup>
 </Project>
