--- a/Week2/Day10/SquareMatrix/SquareMatrix.csproj
+++ b/Week2/Day10/SquareMatrix/SquareMatrix.csproj
@@ -3,13 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>Delegate_Events_Practice</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Program.cs" />
-    <Content Include="work.cs" />
-    <Content Include="EventArgs.cs" />
+    <Content Include="SquareMatrix.cs" />
   </ItemGroup>
 </Project>
