--- a/Week3/Day14/Collection_Trials/Collection_Trials.csproj
+++ b/Week3/Day14/Collection_Trials/Collection_Trials.csproj
@@ -8,5 +8,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Program.cs" />
+    <Content Include="Players.cs" />
   </ItemGroup>
 </Project>
