--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "Week4/GarbageCollection/GarbageCollection.sln"
+    "dotnet.defaultSolution": "Week2/Day9/Day9.sln"
 }
