--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "Week4/Async Concurr/Async Concurr.sln"
+    "dotnet.defaultSolution": "Week4/File and FileStream/File and FileStream.sln"
 }
