--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "Week4/Serialization/Serialization.sln"
+    "dotnet.defaultSolution": "Unit Test_study/Unit Test_study.sln"
 }
