--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "Week5/LINQ and EF/LINQ and EF.sln"
+    "dotnet.defaultSolution": "Week5/Handling DB with EF/Handling DB with EF.sln"
 }
