--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dotnet.defaultSolution": "Week5/Composite Design Pattern/Composite Design Pattern.sln"
+    "dotnet.defaultSolution": "OffClassExercises/ASP MVC/ASP MVC.sln"
 }
