--- a/OffClassExercises/ASP MVC/MVC-Demo/appsettings.json
+++ b/OffClassExercises/ASP MVC/MVC-Demo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=demoJobs.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
